<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/prefrence_title">

    <EditTextPreference
        android:inputType="date"
        android:key="@string/date_from_key"
        android:selectAllOnFocus="true"
        android:title="@string/date_from_title"/>
    <EditTextPreference
        android:inputType="date"
        android:key="@string/date_to_key"
        android:selectAllOnFocus="true"
        android:title="@string/date_to_title"/>
    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/order_by_key"
        android:title="@string/order_by_title"/>
    <EditTextPreference
        android:inputType="number"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:defaultValue="@string/item_per_page_default"
        android:key="@string/item_per_page_key"
        android:title="@string/item_per_page_title"/>
</PreferenceScreen>